[package]
name = "lib-gst-meet-c"
description = "Connect GStreamer pipelines to Jitsi Meet conferences (C bindings)"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
authors = ["Jasper Hugo <jasper@avstack.io>"]

[dependencies]
anyhow = { version = "1", default-features = false }
glib = { version = "0.15", default-features = false }
gstreamer = { version = "0.18", default-features = false }
lib-gst-meet = { version = "0.6", path = "../lib-gst-meet", default-features = false, features = ["tracing-subscriber"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
tracing = { version = "0.1", default-features = false }

[lib]
name = "gstmeet"
crate_type = ["staticlib", "cdylib"]

[features]
default = []
log-rtp = ["lib-gst-meet/log-rtp"]
