[package]
name = "lib-gst-meet"
description = "Connect GStreamer pipelines to Jitsi Meet conferences"
version = "0.4.0"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/avstack/gst-meet"
documentation = "https://docs.rs/lib-gst-meet/"
authors = ["Jasper Hugo <jasper@avstack.io>"]

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
async-stream = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false, features = ["std"] }
colibri = { version = "0.1", default-features = false }
futures = { version = "0.3", default-features = false }
glib = { version = "0.14", default-features = false }
gstreamer = { version = "0.17", default-features = false, features = ["v1_20"] }
gstreamer-rtp = { version = "0.17", default-features = false, features = ["v1_20"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
itertools = { version = "0.10", default-features = false, features = ["use_std"] }
libc = { version = "0.2", default-features = false }
maplit = { version = "1", default-features = false }
nice-gst-meet = { version = "0.1", path = "../nice-gst-meet", default-features = false, features = ["v0_1_16"] }
once_cell = { version = "1", default-features = false, features = ["std"] }
pem = { version = "0.8", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rcgen = { version = "0.8", default-features = false }
ring = { version = "0.16", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", default-features = false, features = ["time"] }
tokio-tungstenite = { version = "0.14", default-features = false, features = ["connect"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.2", optional = true, default-features = false, features = [
  "chrono",
  "fmt",
  "smallvec",
  "parking_lot",
  "tracing-log",
] }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
xmpp-parsers = { path = "../xmpp-parsers", package = "xmpp-parsers-gst-meet", version = "0.18", default-features = false }

[features]
default = ["tls-native"]
tls-native = ["tokio-tungstenite/native-tls"]
tls-native-vendored = ["tokio-tungstenite/native-tls-vendored"]
tls-rustls = ["tokio-tungstenite/rustls-tls"]