[package]
name = "rust-webserver"
version = "0.1.0"
authors = ["Brajendra Kumar <brajendra@sariska.io>"]
edition = "2018"

[dependencies]

# actix
actix-web = { version = "3.0.0" }
actix-rt = "1.1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
strfmt = "0.2.2"
bson = "0.14.1"
jsonwebtoken = "7.1.0"
envfile = "0.2.1"
chrono = "0.4.11"
rust-crypto = "0.2.36"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3.4"
async-trait = "0.1.57"
reqwest = { version = "0.11", features = ["json"] }
sha256 = "1.0.3"
cargo-watch = "8.1.2"
async-std = { version = "1", features = ["attributes", "tokio1"] }
libc = "0.2.132"
rand = "0.8.5"
humantime = "2.1.0"
redis = "0.15"
actix = "0.10.0-alpha.3"
tokio-compat-02 = "0.2.0"
tokio = "=1.21.2"
minreq = "2.6.0"
async-process = "1.5.0"
nix = "0.26.1"
globalenv = "0.4.2"
url = "2.3.1"
